crates/strider-analyze/tests/snapshots/v3__arm__calling_convention__forward_8.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x644:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "9" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "9" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v11" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "9" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "9" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "9" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "10" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "8" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "8" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "15" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "8" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "16" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x10000000c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "19" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v20" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v20" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "21" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "22" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v23" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v23" -> "19" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="init\nr5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "22" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "25" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v26" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v26" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="init\nr6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "28" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v29" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v29" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="init\nr7", shape=Mdiamond, fillcolor="#1a3a5c"];
  "28" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "31" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v32" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v32" -> "28" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "33" -> "28" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="init\nr8", shape=Mdiamond, fillcolor="#1a3a5c"];
  "31" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "34" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v35" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v35" -> "31" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "36" -> "31" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="init\nr9", shape=Mdiamond, fillcolor="#1a3a5c"];
  "34" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "37" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v38" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v38" -> "34" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "39" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "39" [label="init\nr10", shape=Mdiamond, fillcolor="#1a3a5c"];
  "37" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "40" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v41" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v41" -> "37" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "42" -> "37" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "42" [label="init\nr11", shape=Mdiamond, fillcolor="#1a3a5c"];
  "40" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "43" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v44" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v44" -> "40" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "45" -> "40" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "45" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "43" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "46" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "15" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "48" -> "47" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "48" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0x100000008:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "46" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "15" -> "51" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "51" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "52" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x100000004:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "50" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "54" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "15" -> "55" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "55" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "54" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "56" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "7" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "7" [label="init\nr3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "56" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "57" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "6" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nr2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "57" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "4" -> "57" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "5" -> "57" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "5" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\nr0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "58" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "59" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "59" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "58" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "60" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "61" -> "58" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "47" -> "58" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "60" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "62" -> "60" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "63" -> "60" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "51" -> "60" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "62" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "64" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "65" -> "62" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "55" -> "62" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "64" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "66" -> "64" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "67" -> "64" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "64" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "66" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "68" -> "66" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "69" -> "66" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "69" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "66" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "68" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "70" -> "68" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "71" -> "68" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "71" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "68" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "70" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "72" -> "70" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v73" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v73" -> "70" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "8" -> "70" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "72" [label="StackStore u32\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "74" -> "72" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v75" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v75" -> "72" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "47" -> "72" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "74" [label="StackStore u32\n→ ram[sp - 52]", shape=box3d, fillcolor="#20182a"];
  "76" -> "74" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v77" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v77" -> "74" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "51" -> "74" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "76" [label="StackStore u32\n→ ram[sp - 56]", shape=box3d, fillcolor="#20182a"];
  "78" -> "76" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v79" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v79" -> "76" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "55" -> "76" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "78" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "15" -> "78" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "80" -> "78" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "80" [label="const 0x1100c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "78" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
}
